added metrics
