# app/docs/swagger.yaml
@@ -193,6 +193,13 @@ definitions:
       used_bytes:
         type: integer
     type: object
+  metrics.EventSystemMetrics:
+    properties:
+      queues:
+        items:
+          $ref: '#/definitions/metrics.QueueMetrics'
+        type: array
+    type: object
   metrics.ExpirationMetrics:
     properties:
       last_deleted:
@@ -210,6 +217,8 @@ definitions:
     type: object
   metrics.FullMetrics:
     properties:
+      events:
+        $ref: '#/definitions/metrics.EventSystemMetrics'
       expiration:
         $ref: '#/definitions/metrics.ExpirationMetrics'
       rocksdb:
@@ -217,6 +226,17 @@ definitions:
         type: object
       server:
         $ref: '#/definitions/metrics.ServerMetrics'
+    type: object
+  metrics.QueueMetrics:
+    properties:
+      depth:
+        type: integer
+      head:
+        type: integer
+      name:
+        type: string
+      tail:
+        type: integer
     type: object
   metrics.ServerMetrics:
     properties:
